:sparkles: Improve UI

--- a/app/src/main/res/layout/fragment_block.xml
+++ b/app/src/main/res/layout/fragment_block.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#364d5a"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,13 +15,13 @@
             android:id="@+id/warning"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_warning"
             android:tint="@android:color/white"
             android:visibility="invisible"
-            tools:visibility="visible"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            tools:visibility="visible" />
 
         <ImageButton
             android:id="@+id/play_full"
@@ -42,10 +43,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:id="@+id/block_write"
                 android:layout_width="wrap_content"
-                android:layout_height="180dp"
+                android:layout_height="120dp"
                 android:background="#364d5a"
                 android:paddingTop="2dp">
 
@@ -62,12 +64,12 @@
 
                 <TextView
                     android:id="@+id/tv_write"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/play_write"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_write"
                     android:gravity="bottom"
                     android:textColor="#9fb7cc"
                     android:textSize="12sp"
@@ -75,12 +77,13 @@
 
                 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/legend_write"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_write"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_write"
                     android:gravity="bottom"
                     android:text="@string/chart_label"
                     android:textColor="#9fb7cc"
@@ -103,10 +106,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_write_result"
-                    android:layout_marginBottom="35dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="-15dp"
+                    android:layout_marginTop="5dp"
                     chart:chart_axisColor="#30547d99"
                     chart:chart_typeface="OpenSans-Regular.ttf" />
             </RelativeLayout>
@@ -114,29 +117,29 @@
             <RelativeLayout
                 android:id="@+id/block_read"
                 android:layout_width="wrap_content"
-                android:layout_height="180dp"
+                android:layout_height="120dp"
                 android:background="#364d5a">
 
                 <ImageButton
-                        android:id="@+id/play_read"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginRight="5dp"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_play_toolbar" />
+                    android:id="@+id/play_read"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_play_toolbar" />
 
 
                 <TextView
                     android:id="@+id/tv_read"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/play_read"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_read"
                     android:gravity="bottom"
                     android:textColor="#9fb7cc"
                     android:textSize="12sp"
@@ -144,12 +147,13 @@
 
                 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/legend_read"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_read"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_read"
                     android:gravity="bottom"
                     android:text="@string/chart_label"
                     android:textColor="#9fb7cc"
@@ -172,10 +176,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_read_result"
-                    android:layout_marginBottom="35dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="-15dp"
+                    android:layout_marginTop="5dp"
                     chart:chart_axisColor="#30547d99"
                     chart:chart_typeface="OpenSans-Regular.ttf" />
             </RelativeLayout>
@@ -183,7 +187,7 @@
             <RelativeLayout
                 android:id="@+id/block_update"
                 android:layout_width="wrap_content"
-                android:layout_height="180dp"
+                android:layout_height="120dp"
                 android:background="#364d5a"
                 android:paddingTop="2dp">
 
@@ -201,12 +205,12 @@
 
                 <TextView
                     android:id="@+id/tv_update"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/play_update"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_update"
                     android:gravity="bottom"
                     android:textColor="#9fb7cc"
                     android:textSize="12sp"
@@ -214,12 +218,13 @@
 
                 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/legend_update"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_update"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_update"
                     android:gravity="bottom"
                     android:text="@string/chart_label"
                     android:textColor="#9fb7cc"
@@ -242,10 +247,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_update_result"
-                    android:layout_marginBottom="35dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="-15dp"
+                    android:layout_marginTop="5dp"
                     chart:chart_axisColor="#30547d99"
                     chart:chart_typeface="OpenSans-Regular.ttf" />
             </RelativeLayout>
@@ -253,7 +258,7 @@
             <RelativeLayout
                 android:id="@+id/block_delete"
                 android:layout_width="wrap_content"
-                android:layout_height="180dp"
+                android:layout_height="120dp"
                 android:background="#364d5a"
                 android:paddingTop="2dp">
 
@@ -271,12 +276,12 @@
 
                 <TextView
                     android:id="@+id/tv_delete"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/play_delete"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_delete"
                     android:gravity="bottom"
                     android:textColor="#9fb7cc"
                     android:textSize="12sp"
@@ -284,12 +289,13 @@
 
                 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/legend_delete"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_delete"
                     android:layout_marginLeft="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/play_delete"
                     android:gravity="bottom"
                     android:text="@string/chart_label"
                     android:textColor="#9fb7cc"
@@ -307,16 +313,15 @@
                     android:textColor="#ffffff"
                     android:textSize="30sp" />
 
-                <com.db.chart.view.LineChartView
-                    xmlns:chart="http://schemas.android.com/apk/res-auto"
+                <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/chart_delete"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_delete_result"
-                    android:layout_marginBottom="35dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="-15dp"
+                    android:layout_marginTop="5dp"
                     chart:chart_axisColor="#30547d99"
                     chart:chart_typeface="OpenSans-Regular.ttf" />
             </RelativeLayout>
